[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/resources/element_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://assets/resources/env_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/nodes/ui/UIBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Game.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 0.1
glow_blend_mode = 1
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="TimeBar" parent="GUI" instance=ExtResource( 5 )]

[node name="ChaosBar" parent="GUI" instance=ExtResource( 5 )]
margin_left = 13.0
margin_right = 53.0
sprite_rect_x = 83
colored = true

[node name="BackgroundMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 6, 0, 65536, 7, 0, 65558, 2, 0, 131072, 7, 0, 131094, 2, 0, 196608, 7, 0, 196630, 2, 0, 262144, 7, 0, 262166, 2, 0, 327680, 7, 0, 327702, 2, 0, 393216, 7, 0, 393238, 2, 0, 458752, 7, 0, 458774, 2, 0, 524288, 7, 0, 524310, 2, 0, 589824, 7, 0, 589846, 2, 0, 655360, 7, 0, 655382, 2, 0, 720896, 7, 0, 720918, 2, 0, 786432, 7, 0, 786453, 0, 0, 786454, 2, 0, 851968, 7, 0, 851990, 2, 0, 917504, 7, 0, 917525, 0, 65536, 917526, 2, 0, 983040, 8, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 9, 0, 1048592, 0, 0, 1048593, 0, 0, 1114128, 0, 0, 1114129, 0, 0 )

[node name="ElementMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131092, 2, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 2, 0, 196628, 1, 0, 262164, 1, 0, 327682, 0, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 2, 0, 327700, 1, 0, 393236, 1, 0, 458754, 0, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 2, 0, 458772, 1, 0, 524308, 1, 0, 589826, 0, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 2, 0, 589844, 1, 0, 655366, 1, 0, 655380, 1, 0, 720898, 0, 0, 720902, 1, 0, 720916, 1, 0, 786438, 1, 0, 786452, 1, 0, 851974, 1, 0, 851988, 2, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 52.4837, 52.0382 )
collision_mask = 12

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="GooContainer" type="Node2D" parent="."]
